# urban-scheduler

./: .drone.yml  .gitignore  README.md
app/: Dockerfile  app.py  cities.yaml  exceptions.py  lib.py  ordered_benchmark.yaml  osm_connector.py  requirements.txt  start-dev.sh
app/helpers/: benchmark.py  get-params.sh
app/logic/: event_types.py  predictor.py
app/process/: connector.py  parser.py  post_processor.py  processor.py  rebuild-data.sh
app/tests/: app_tests.py  benchmark.py  int_tests.py  test.py
deploy/: backup.sh  preprocess-data.sh  preprocess-osrm-final.sh  preprocess-osrm.sh  restore.sh
deploy/dev/: docker-compose.yml
deploy/prod/: docker-compose.yml
deploy/rc/: docker-compose.yml
experiments/: benchmark.py  build-plots.sh  make_experiment.py  submit.py
experiments/plots/: gtsp.plot  gtsp_plot.plot  gtsp_pts_per_event.plot  ordered.plot  tsp.plot
front/: .env.development  .env.production  .env.rc  Dockerfile  Dockerfile-rc  package-lock.json  package.json
global_tests/: test_deployed.py  test_front.py
meta/: demo1.yaml  partial_order.yaml  test_results1.txt
misc_scripts/: extract_files.py  prepare_one_file.py  preprocess-osrm.py  preprocess_osrm.py
rustapp/: Cargo.toml  Dockerfile  restart-on-filechange.sh
rustapp/src/: distances.rs  error.rs  events.rs  final_route.rs  logic.rs  main.rs  problem.rs  report.rs  solve_generic.rs  solve_opt.rs  solve_ordered.rs  test_helpers.rs  test_performance.rs
rustapp/src/opt/: main.lp  main.tbl  template.zimpl
rustapp/zimpl/: test.lp  test.tbl  test.zimpl
solver/: Dockerfile
(+31 files in other folders)
