[package]
name = "usrust"
version = "0.1.0"
authors = ["Omrigan <omrigann@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
geo = "0.12.0"
ndarray = "0.12.1"
ndarray-stats = "0.2.0"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.14"
scan_fmt = "0.1.3"